# aws_dynamodb_rust_demo

./: Cargo.toml  README.md
src/: main.rs
